# file_transfer

./: .gitignore  15_03.md  15_11.md  16_14.md  16_21.md  18_mar.md  99-qnc-grippers.rules  CMakeLists.txt  DEPLOY_MEMO.md  Industrial_Automation_Closed-Loop_Demonstration_Test_Case.md  README.md  Zimmer-LWR50L-02-00001-A-20210521-IODD1.1.xml  main.c  pin_mapping.md  qnc_bridge.cpp  qnc_bridge_improved.cpp  qnc_bridge_updated.cpp  verification.md
nucleo/: README.md
nucleo/Core/Inc/: iolink.h
nucleo/industrial_automation_nucleo/: .cproject  .mxproject  .project  industrial_automation_nucleo.ioc
nucleo/industrial_automation_nucleo/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
nucleo/industrial_automation_nucleo/Core/Src/: iolink.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
